--- a/VSBuildNotify/Options/OptionsPageControl.xaml
+++ b/VSBuildNotify/Options/OptionsPageControl.xaml
@@ -9,6 +9,7 @@
 
     <UserControl.Resources>
         <helpers:NotifierTypeValueConverter x:Key="NotifierTypeValueConverter" />
+        <helpers:PushbulletEnabledValueConverter x:Key="PushbulletEnabledValueConverter" />
 
         <Style x:Key = "EditableControlStyle" TargetType="{x:Type Control}">
             <Setter Property = "Height" Value = "22" />
@@ -38,13 +39,13 @@
                 <TextBox Style="{StaticResource EditableControlStyle}" Text="{Binding Path=NotificationTitle}" HorizontalAlignment="Left" VerticalAlignment="Center" TextWrapping="Wrap" Grid.Column="1" Grid.Row="0" Margin="0,8"/>
                 <TextBox Style="{StaticResource EditableControlStyle}" Text="{Binding Path=SucessText}" HorizontalAlignment="Left" VerticalAlignment="Center" TextWrapping="Wrap" Grid.Column="1" Grid.Row="1"/>
                 <TextBox Style="{StaticResource EditableControlStyle}" Text="{Binding Path=FailureText}" HorizontalAlignment="Left" VerticalAlignment="Center" TextWrapping="Wrap" Grid.Column="1" Grid.Row="2"/>
-                <ComboBox Style="{StaticResource EditableControlStyle}" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="1" Grid.Row="3" 
+                <ComboBox x:Name="cmbxNotificationType" Style="{StaticResource EditableControlStyle}" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="1" Grid.Row="3" 
                           ItemsSource="{Binding Source={StaticResource NotifierTypeValueConverter}, Path=Strings}"
                           SelectedItem="{Binding Path=NotifierType, Converter={StaticResource NotifierTypeValueConverter}}"/>
             </Grid>
         </GroupBox>
-        
-        <GroupBox Header="Pushbullet" Width="470" Height="94">
+
+        <GroupBox Header="Pushbullet" Width="470" Height="94" IsEnabled="{Binding ElementName=cmbxNotificationType, Path=SelectedIndex, Converter={StaticResource PushbulletEnabledValueConverter}}">
             <Grid Width="455" Height="60" HorizontalAlignment="Center" VerticalAlignment="Center">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="141*"></ColumnDefinition>
