--- a/VSBuildNotify/Options/Page/OptionsPageControl.xaml
+++ b/VSBuildNotify/Options/Page/OptionsPageControl.xaml
@@ -1,12 +1,12 @@
-﻿<UserControl x:Class="VSBuildNotify.Options.OptionsPageControl"
+﻿<UserControl x:Class="VSBuildNotify.Options.Page.OptionsPageControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:VSBuildNotify.Options"
+             xmlns:local="clr-namespace:VSBuildNotify.Options.Page"
              xmlns:helpers="clr-namespace:VSBuildNotify.Helpers"
-             mc:Ignorable="d" Height="305" LostKeyboardFocus="UserControl_LostKeyboardFocus" Width="509">
-
+             mc:Ignorable="d" 
+             d:DesignHeight="450" d:DesignWidth="800" LostKeyboardFocus="UserControl_LostKeyboardFocus">
     <UserControl.Resources>
         <helpers:NotifierTypeValueConverter x:Key="NotifierTypeValueConverter" />
         <helpers:PushbulletEnabledValueConverter x:Key="PushbulletEnabledValueConverter" />
